--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   logger: ^2.1.0  #for logging purpose
   percent_indicator: ^4.0.1
   cached_network_image: ^3.3.1
+  ferry: #[latest-version]
+  gql_http_link: #[latest-version]
+  ferry_flutter:
 
 
 
@@ -39,6 +42,7 @@ dev_dependencies:
   riverpod_lint: ^2.3.10
   auto_route_generator: ^7.0.0
   retrofit_generator: '>=7.0.0 <8.0.0'  
+  ferry_generator: #[latest-version]
 
 flutter:
   uses-material-design: true
